Update Principal.java